Day 13 - Check In - II

--- a/100L30D.ipynb
+++ b/100L30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 100L30D\n",
-    "![65%](https://progress-bar.dev/65?title=progress&width=100)\n",
+    "![67%](https://progress-bar.dev/67?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 100 Leetcode problems of varying difficulty in 30 days.<br>\n",
@@ -1008,7 +1008,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://tinyurl.com/vZORmf\n"
+      "https://tinyurl.com/POtTZH\n"
      ]
     }
    ],
@@ -1775,7 +1775,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|#######################################################################| 362880/362880 [00:02<00:00, 135202.40it/s]\n"
+      "100%|#######################################################################| 362880/362880 [00:02<00:00, 147651.53it/s]\n"
      ]
     }
    ],
@@ -4520,7 +4520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 72,
    "id": "6ed5c870-530c-43b9-b62f-7e23b97ed187",
    "metadata": {},
    "outputs": [],
@@ -4608,25 +4608,144 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a467034f-4a5d-4799-9ecb-5d370d2eb17b",
+   "metadata": {},
+   "source": [
+    "# 66.\n",
+    "Date: 1st Jan 2024<br>\n",
+    "Medium Leetcode: odd-even-linked-list<br>\n",
+    "Solution: https://leetcode.com/problems/odd-even-linked-list/submissions/1133644559/"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "de12904b-f474-4082-b621-2877766b00f3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def oddEvenList(self, head: ListNode) -> ListNode:\n",
+    "\n",
+    "        if not head or not head.next:\n",
+    "            return head\n",
+    "\n",
+    "        oddHead = head\n",
+    "        evenHead = head.next\n",
+    "\n",
+    "        even, odd = None, head\n",
+    "\n",
+    "        while odd.next and odd.next.next:\n",
+    "            if even:\n",
+    "                even.next = odd.next\n",
+    "            even = odd.next\n",
+    "            odd.next = odd.next.next\n",
+    "            odd = odd.next\n",
+    "\n",
+    "        if odd.next:\n",
+    "            if even:\n",
+    "                even.next = odd.next\n",
+    "            even = odd.next\n",
+    "\n",
+    "        even.next = None\n",
+    "        odd.next = evenHead\n",
+    "        return oddHead\n",
+    "\n",
+    "# Test the solution\n",
+    "assert Solution().oddEvenList(ListNode.to_singly_linked_list([1])).to_list() == [1]\n",
+    "assert Solution().oddEvenList(ListNode.to_singly_linked_list([1,2])).to_list() == [1,2]\n",
+    "assert Solution().oddEvenList(ListNode.to_singly_linked_list([1,2,3])).to_list() == [1,3,2]\n",
+    "assert Solution().oddEvenList(ListNode.to_singly_linked_list([1,2,3,4])).to_list() == [1,3,2,4]\n",
+    "assert Solution().oddEvenList(ListNode.to_singly_linked_list([1,2,3,4,5])).to_list() == [1,3,5,2,4]\n",
+    "assert Solution().oddEvenList(ListNode.to_singly_linked_list([2,1,3,5,6,4])).to_list() == [2,3,6,1,5,4]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f294d6f9-d1ac-4033-84cb-bbb1f48e92f3",
+   "metadata": {},
+   "source": [
+    "# 67.\n",
+    "Date: 1st Jan 2024<br>\n",
+    "Medium Leetcode: integer-break<br>\n",
+    "Solution: https://leetcode.com/problems/integer-break/submissions/1133696721/"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "f681c77b-1972-4e0e-bcbc-f18d77019d8b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "\n",
+    "    def maxProduct(n, k):\n",
+    "        minimum = n // k\n",
+    "        remainder = n - (minimum * k)\n",
+    "    \n",
+    "        # Equally split remainder between the splits\n",
+    "        extra_each = math.ceil(remainder / k)\n",
+    "    \n",
+    "        result = 1\n",
+    "        for i in range(k - 1):\n",
+    "            if remainder > 0:\n",
+    "                result *= minimum + extra_each\n",
+    "                remainder -= extra_each\n",
+    "            else:\n",
+    "                result *= minimum\n",
+    "    \n",
+    "        result *= minimum + remainder\n",
+    "        return result\n",
+    "\n",
+    "    def integerBreak(self, n: int) -> int:\n",
+    "        result = 0\n",
+    "        for k in range(2, n + 1):\n",
+    "            result = max(Solution.maxProduct(n, k), result)\n",
+    "        return result\n",
+    "    \n",
+    "    def generatePossibleCombinations(self, n: int) -> int:\n",
+    "        '''\n",
+    "        5:  ans = 6\n",
+    "        5 - [1, 1, 1, 1, 1]\n",
+    "        4 - [2, 1, 1, 1]\n",
+    "        3 - [2, 2, 1] or [3, 1, 1]\n",
+    "        2* - [4, 1] or [3, 2]\n",
+    "\n",
+    "        6: ans = 9\n",
+    "        6 - [1, 1, 1, 1, 1, 1]\n",
+    "        5 - [2, 1, 1, 1, 1]\n",
+    "        4 - [2, 2, 1, 1] or [3, 1, 1, 1]\n",
+    "        3 - [4, 1, 1] or [3, 2, 1] or [2, 2, 2]\n",
+    "        2* - [5, 1] or [4, 2] or [3, 3]\n",
+    "        '''\n",
+    "\n",
+    "        if n == 0:\n",
+    "            return []\n",
+    "        elif n == 1:\n",
+    "            return [[1]]\n",
+    "        else:\n",
+    "            result = []\n",
+    "            for i in range(1, n):\n",
+    "                if i <= n:\n",
+    "                    for comb in self.integerBreak(n - i):\n",
+    "                        result.append([i, *comb])\n",
+    "                else:\n",
+    "                    break\n",
+    "            return result\n",
+    "\n",
+    "# Test the solution\n",
+    "assert Solution().integerBreak(2) == 1\n",
+    "assert Solution().integerBreak(10) == 36\n",
+    "assert Solution().integerBreak(5) == 6\n",
+    "assert Solution().integerBreak(6) == 9"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40ee0d82-2784-493d-bdf7-c821be25a1ea",
+   "id": "806da48e-fdf6-4a60-8e3f-741c3bc8dd63",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4634,7 +4753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2923d25f-196d-4dac-8d97-2538e479dcae",
+   "id": "a4e47af3-db52-4886-b1ec-0a8e33ccc0ab",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4642,15 +4761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdcf9b19-5dbf-4f32-a64c-abe7c8ee36f8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d729bff5-7a55-4e03-89d6-4d0ce5a6dd05",
+   "id": "87e073ad-3778-4fcc-b05c-37c4d7616e10",
    "metadata": {},
    "outputs": [],
    "source": []
