Day 14 - Check In

--- a/100L30D.ipynb
+++ b/100L30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 100L30D\n",
-    "![67%](https://progress-bar.dev/67?title=progress&width=100)\n",
+    "![70%](https://progress-bar.dev/70?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 100 Leetcode problems of varying difficulty in 30 days.<br>\n",
@@ -1008,7 +1008,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://tinyurl.com/POtTZH\n"
+      "https://tinyurl.com/UEdseL\n"
      ]
     }
    ],
@@ -1775,7 +1775,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|#######################################################################| 362880/362880 [00:02<00:00, 147651.53it/s]\n"
+      "100%|#######################################################################| 362880/362880 [00:01<00:00, 258175.42it/s]\n"
      ]
     }
    ],
@@ -4743,9 +4743,148 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "99dd5272-9538-4ad0-a22d-63738faa8ec2",
+   "metadata": {},
+   "source": [
+    "# 68.\n",
+    "Date: 2nd Jan 2024<br>\n",
+    "Medium Leetcode: find-first-and-last-position-of-element-in-sorted-array<br>\n",
+    "Solution: https://leetcode.com/problems/find-first-and-last-position-of-element-in-sorted-array/submissions/1134183074/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "806da48e-fdf6-4a60-8e3f-741c3bc8dd63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def searchRange(self, nums: list[int], target: int) -> list[int]:\n",
+    "        # Find the first position\n",
+    "        low, high = 0, len(nums) - 1\n",
+    "        while low <= high:\n",
+    "            mid = (low + high) // 2\n",
+    "            if nums[mid] == target and (mid == 0 or nums[mid - 1] < target):\n",
+    "                start = mid\n",
+    "                break\n",
+    "            elif nums[mid] >= target:\n",
+    "                high = mid - 1\n",
+    "            else:\n",
+    "                low = mid + 1\n",
+    "        else:\n",
+    "            start = -1\n",
+    "\n",
+    "        # Find the last position\n",
+    "        low, high = 0, len(nums) - 1\n",
+    "        while low <= high:\n",
+    "            mid = (low + high) // 2\n",
+    "            if nums[mid] == target and (mid == len(nums) - 1 or nums[mid + 1] > target):\n",
+    "                end = mid\n",
+    "                break\n",
+    "            elif nums[mid] > target:\n",
+    "                high = mid - 1\n",
+    "            else:\n",
+    "                low = mid + 1\n",
+    "        else:\n",
+    "            end = -1\n",
+    "\n",
+    "        return [start, end]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().searchRange([0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2], 1) == [3, 12]\n",
+    "assert Solution().searchRange([0, 0, 0, 1, 1, 1, 1], 1) == [3, 6]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5db993a-7eb2-4ee8-a5b3-bd2a247d8f9f",
+   "metadata": {},
+   "source": [
+    "# 69.\n",
+    "Date: 2nd Jan 2024<br>\n",
+    "Medium Leetcode: convert-an-array-into-a-2d-array-with-conditions<br>\n",
+    "Solution: https://leetcode.com/problems/convert-an-array-into-a-2d-array-with-conditions/submissions/1134191522"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "a4e47af3-db52-4886-b1ec-0a8e33ccc0ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 3, 4, 2], [1, 3], [1]]\n",
+      "[[3, 4, 1, 2], [3, 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def findMatrix(self, nums: List[int]) -> List[List[int]]:\n",
+    "        positions = collections.defaultdict(lambda: -1)\n",
+    "        result = [[]]\n",
+    "        for n in nums:\n",
+    "            currIndex = positions[n] + 1\n",
+    "            positions[n] = currIndex\n",
+    "            if len(result) == currIndex:\n",
+    "                result.append([])\n",
+    "            result[positions[n]].append(n)\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "print(Solution().findMatrix([1,3,4,1,2,3,1]))\n",
+    "print(Solution().findMatrix([3,4,1,2,3,1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5913ceb3-f545-43c9-afdc-129da0e35d9e",
+   "metadata": {},
+   "source": [
+    "# 70.\n",
+    "Date: 2nd Jan 2024<br>\n",
+    "Easy Leetcode: binary-tree-preorder-traversal <br>\n",
+    "Solution: https://leetcode.com/problems/binary-tree-preorder-traversal/submissions/1134217061/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "d1e7a338-a8e5-4536-9c82-ec2d0a84a4af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def __init__(self):\n",
+    "        self.result = []\n",
+    "        \n",
+    "    def DFS(self, root):\n",
+    "\n",
+    "        if not root:\n",
+    "            return\n",
+    "\n",
+    "        self.result.append(root.val)\n",
+    "        self.DFS(root.left)\n",
+    "        self.DFS(root.right)\n",
+    "\n",
+    "    def preorderTraversal(self, root: BinaryTreeNode) -> List[int]:\n",
+    "        self.DFS(root)\n",
+    "        return self.result\n",
+    "\n",
+    "# Test the solution\n",
+    "assert Solution().preorderTraversal(BinaryTreeNode.from_array([1,None,2,3])) == [1, 2, 3]\n",
+    "assert Solution().preorderTraversal(BinaryTreeNode.from_array([1])) == [1]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "806da48e-fdf6-4a60-8e3f-741c3bc8dd63",
+   "id": "773cc3f7-a7f5-4b34-86a9-273f733301c3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4753,7 +4892,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4e47af3-db52-4886-b1ec-0a8e33ccc0ab",
+   "id": "5fc849a4-d6e3-463a-bc9e-2d2c30038343",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d19c06f6-98c6-49ca-a243-fc3b13833ffd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cef31b0-030f-4528-affa-d716bfff169b",
    "metadata": {},
    "outputs": [],
    "source": []
