Day 14 - Check In II

--- a/100L30D.ipynb
+++ b/100L30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 100L30D\n",
-    "![70%](https://progress-bar.dev/70?title=progress&width=100)\n",
+    "![71%](https://progress-bar.dev/71?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 100 Leetcode problems of varying difficulty in 30 days.<br>\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7e8f7725-fb43-4f4e-954a-299f2eacdc10",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "bc81f97b-9163-4aa7-bf70-4030e78541a9",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
        "[1, 2, 3, 4, 5, 6, None, None, None, 7, 8, None, None, None, None, None, None]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "dd983b16-b389-4aca-abbd-321b4bda6a80",
    "metadata": {},
    "outputs": [],
@@ -4882,25 +4882,91 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "773cc3f7-a7f5-4b34-86a9-273f733301c3",
+   "cell_type": "markdown",
+   "id": "32a5aeb8-1d3e-4ea3-9cd6-8ccb5ecf06bc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 71.\n",
+    "Date: 2nd Jan 2024<br>\n",
+    "Medium Leetcode: Coin Change - II<br>\n",
+    "Solution: https://leetcode.com/problems/coin-change-ii/submissions/1134349857/"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5fc849a4-d6e3-463a-bc9e-2d2c30038343",
+   "execution_count": 78,
+   "id": "773cc3f7-a7f5-4b34-86a9-273f733301c3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def get_possibilities(self, amount: int, coins: List[int], memo: dict[int, list[list[int]]] = dict()) -> int:\n",
+    "        if amount in memo:\n",
+    "            results = memo[amount]\n",
+    "            \n",
+    "        elif amount == 0:\n",
+    "            results = [[]]\n",
+    "            \n",
+    "        else:\n",
+    "            results = []\n",
+    "            for coin in coins:\n",
+    "                if coin <= amount:\n",
+    "                    for result in self.get_possibilities(amount - coin, coins):\n",
+    "                        if len(result) == 0 or result[-1] <= coin:\n",
+    "                            results.append(result + [coin])\n",
+    "\n",
+    "        memo[amount] = results\n",
+    "        return results\n",
+    "\n",
+    "    def change(self, amount: int, coins: List[int]):\n",
+    "        \n",
+    "        @functools.cache\n",
+    "        def pick_nopick_solution(amount, coinIndex=0):\n",
+    "            # Pick or No Pick approach\n",
+    "            if len(coins[coinIndex:]) == 0 or amount < 0:\n",
+    "                return 0\n",
+    "            elif len(coins[coinIndex:]) == 1:\n",
+    "                return int(amount % coins[coinIndex] == 0)\n",
+    "            elif amount == 0:\n",
+    "                return 1\n",
+    "            else:\n",
+    "                return pick_nopick_solution(amount - coins[coinIndex], coinIndex) + pick_nopick_solution(amount, coinIndex + 1)\n",
+    "                \n",
+    "        return pick_nopick_solution(amount)\n",
+    "\n",
+    "# Testing the solution\n",
+    "temp = Solution().get_possibilities(50, [1, 2, 3])\n",
+    "assert len(temp), Solution().change(50, [1, 2, 3])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "d19c06f6-98c6-49ca-a243-fc3b13833ffd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff34ea31-25ee-4c9a-a187-472a7605262b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc0cb870-1725-4f51-a147-de36335323f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81946c52-676d-47b2-b20e-b4abbe3dc986",
    "metadata": {},
    "outputs": [],
    "source": []
