Optimized coin change solution

--- a/100L30D.ipynb
+++ b/100L30D.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7e8f7725-fb43-4f4e-954a-299f2eacdc10",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "bc81f97b-9163-4aa7-bf70-4030e78541a9",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
        "[1, 2, 3, 4, 5, 6, None, None, None, 7, 8, None, None, None, None, None, None]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "dd983b16-b389-4aca-abbd-321b4bda6a80",
    "metadata": {},
    "outputs": [],
@@ -1008,7 +1008,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://tinyurl.com/UEdseL\n"
+      "https://tinyurl.com/rHMiLO\n"
      ]
     }
    ],
@@ -1775,7 +1775,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|#######################################################################| 362880/362880 [00:01<00:00, 258175.42it/s]\n"
+      "100%|#######################################################################| 362880/362880 [00:02<00:00, 133402.93it/s]\n"
      ]
     }
    ],
@@ -4918,21 +4918,17 @@
     "        memo[amount] = results\n",
     "        return results\n",
     "\n",
-    "    def change(self, amount: int, coins: List[int]):\n",
-    "        \n",
+    "    def change(self, amount: int, coins: List[int]): \n",
     "        @functools.cache\n",
-    "        def pick_nopick_solution(amount, coinIndex=0):\n",
-    "            # Pick or No Pick approach\n",
-    "            if len(coins[coinIndex:]) == 0 or amount < 0:\n",
+    "        def solve(idx, amount):\n",
+    "            if amount == 0:\n",
+    "                return 1    \n",
+    "            elif amount < 0 or idx >= len(coins):\n",
     "                return 0\n",
-    "            elif len(coins[coinIndex:]) == 1:\n",
-    "                return int(amount % coins[coinIndex] == 0)\n",
-    "            elif amount == 0:\n",
-    "                return 1\n",
     "            else:\n",
-    "                return pick_nopick_solution(amount - coins[coinIndex], coinIndex) + pick_nopick_solution(amount, coinIndex + 1)\n",
-    "                \n",
-    "        return pick_nopick_solution(amount)\n",
+    "                return solve(idx, amount - coins[idx]) + solve(idx + 1, amount)\n",
+    "        \n",
+    "        return solve(0, amount)\n",
     "\n",
     "# Testing the solution\n",
     "temp = Solution().get_possibilities(50, [1, 2, 3])\n",
