Day 15 - Check In

--- a/100L30D.ipynb
+++ b/100L30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 100L30D\n",
-    "![71%](https://progress-bar.dev/71?title=progress&width=100)\n",
+    "![74%](https://progress-bar.dev/74?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 100 Leetcode problems of varying difficulty in 30 days.<br>\n",
@@ -4936,25 +4936,134 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c15c6d4a-691a-42b2-a0a0-958d3e86ca9a",
+   "metadata": {},
+   "source": [
+    "# 72.\n",
+    "Date: 3rd Jan 2024<br>\n",
+    "Easy Leetcode: n-th-tribonacci-number<br>\n",
+    "Solution: https://leetcode.com/problems/n-th-tribonacci-number/submissions/1135120293/"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d19c06f6-98c6-49ca-a243-fc3b13833ffd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    @functools.cache\n",
+    "    def tribonacci_(self, n: int) -> int:\n",
+    "        if n == 0:\n",
+    "            return 0\n",
+    "        elif n <= 2:\n",
+    "            return 1\n",
+    "        else:\n",
+    "            return self.tribonacci(n - 1) +  self.tribonacci(n - 2) + self.tribonacci(n - 3)\n",
+    "\n",
+    "    def tribonacci(self, n: int) -> int:\n",
+    "        minus1, minus2, minus3 = 0, 1, 1\n",
+    "\n",
+    "        if n == 0:\n",
+    "            return 0\n",
+    "        elif n <= 2:\n",
+    "            return 1\n",
+    "        else:\n",
+    "            for _ in range(n - 2):\n",
+    "                res = minus1 + minus2 + minus3\n",
+    "                minus1, minus2, minus3 = minus2, minus3, res\n",
+    "            return res\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().tribonacci(10) == Solution().tribonacci_(10)\n",
+    "assert Solution().tribonacci(11) == Solution().tribonacci_(11)\n",
+    "assert Solution().tribonacci(1) == Solution().tribonacci_(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bae9642f-d916-476e-888a-bf532cd77294",
+   "metadata": {},
+   "source": [
+    "## 73.\n",
+    "Date: 3rd Jan 2024<br>\n",
+    "Medium Leetcode: number-of-laser-beams-in-a-bank<br>\n",
+    "Solution: https://leetcode.com/problems/number-of-laser-beams-in-a-bank/submissions/1135129178"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ff34ea31-25ee-4c9a-a187-472a7605262b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def numberOfBeams(self, bank: List[str]) -> int:\n",
+    "        prev = 0\n",
+    "        laser_count = 0\n",
+    "        for floor in bank:\n",
+    "            camera_count = floor.count('1')\n",
+    "            if camera_count:\n",
+    "                laser_count += prev * camera_count\n",
+    "                prev = camera_count\n",
+    "        return laser_count\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().numberOfBeams([\"011001\",\"000000\",\"010100\",\"001000\"]) == 8\n",
+    "assert Solution().numberOfBeams([\"000\",\"111\",\"000\"]) == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "178bce78-77e0-4abc-894d-4ffa4a428f1f",
+   "metadata": {},
+   "source": [
+    "## 74.\n",
+    "Date: 3rd Jan 2024<br>\n",
+    "Medium Leetcode: count-sorted-vowel-strings<br>\n",
+    "Solution: https://leetcode.com/problems/count-sorted-vowel-strings/submissions/1135202864/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a42756ad-08a2-4b4d-a5cb-2d62c7ef7ff2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "66045"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    @functools.cache\n",
+    "    def countVowelStrings(self, n: int, i: int = 0) -> int:\n",
+    "        vowels = [\"a\", \"e\", \"i\", \"o\", \"u\"]\n",
+    "        if n == 0:\n",
+    "            return 1\n",
+    "        elif n < 0 or i > 4:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            return self.countVowelStrings(n - 1, i) + self.countVowelStrings(n, i + 1)\n",
+    "\n",
+    "# Test the solution\n",
+    "Solution().countVowelStrings(33)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc0cb870-1725-4f51-a147-de36335323f8",
+   "id": "dcbc8250-f0a0-4c12-8ca4-33ee024cbeed",
    "metadata": {},
    "outputs": [],
    "source": []
