Day 15 - Check In - II

--- a/100L30D.ipynb
+++ b/100L30D.ipynb
@@ -1008,7 +1008,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://tinyurl.com/rHMiLO\n"
+      "https://tinyurl.com/TaPeIC\n"
      ]
     }
    ],
@@ -1775,7 +1775,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|#######################################################################| 362880/362880 [00:02<00:00, 133402.93it/s]\n"
+      "100%|#######################################################################| 362880/362880 [00:02<00:00, 134476.39it/s]\n"
      ]
     }
    ],
@@ -4948,7 +4948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 79,
    "id": "d19c06f6-98c6-49ca-a243-fc3b13833ffd",
    "metadata": {},
    "outputs": [],
@@ -4995,7 +4995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 80,
    "id": "ff34ea31-25ee-4c9a-a187-472a7605262b",
    "metadata": {},
    "outputs": [],
@@ -5029,7 +5029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 81,
    "id": "a42756ad-08a2-4b4d-a5cb-2d62c7ef7ff2",
    "metadata": {},
    "outputs": [
@@ -5039,7 +5039,7 @@
        "66045"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5061,17 +5061,143 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b2b7ab5b-91c4-46b2-a67e-fc68a3329e19",
+   "metadata": {},
+   "source": [
+    "## 75.\n",
+    "Date: 3rd Jan 2024<br>\n",
+    "Medium Leetcode: jump-game-ii<br>\n",
+    "Solution: https://leetcode.com/problems/jump-game-ii/submissions/1135695965/"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "dcbc8250-f0a0-4c12-8ca4-33ee024cbeed",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def jump(self, nums: List[int]) -> int:\n",
+    "        for i in range(len(nums) - 1, -1, -1):\n",
+    "\n",
+    "            if i == len(nums) - 1:\n",
+    "                nums[i] = 0\n",
+    "\n",
+    "            else:\n",
+    "                res = math.inf\n",
+    "                for j in range(1, nums[i] + 1):\n",
+    "                    if i + j < len(nums):\n",
+    "                        res = min(res, 1 + nums[i + j])\n",
+    "                    else:\n",
+    "                        res = 1\n",
+    "                        break\n",
+    "                nums[i] = res\n",
+    "\n",
+    "        return nums[0]\n",
+    "\n",
+    "# Test the solution\n",
+    "assert Solution().jump([2,3,0,1,4]) == 2\n",
+    "assert Solution().jump([1,2,3]) == 2\n",
+    "assert Solution().jump([3,2,1]) == 1\n",
+    "assert Solution().jump([0]) == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e13588ad-1667-4ceb-90b0-b697aedd1094",
+   "metadata": {},
+   "source": [
+    "## 76.\n",
+    "Date: 3rd Jan 2024<br>\n",
+    "Medium Leetcode: letter-combinations-of-a-phone-number<br>\n",
+    "Solution: https://leetcode.com/problems/letter-combinations-of-a-phone-number/submissions/1135713597/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "6cef31b0-030f-4528-affa-d716bfff169b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['pw', 'px', 'py', 'pz', 'qw', 'qx', 'qy', 'qz', 'rw', 'rx', 'ry', 'rz', 'sw', 'sx', 'sy', 'sz']\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "\n",
+    "    mapping = {\n",
+    "        \"2\": \"abc\",\n",
+    "        \"3\": \"def\",\n",
+    "        \"4\": \"ghi\",\n",
+    "        \"5\": \"jkl\",\n",
+    "        \"6\": \"mno\",\n",
+    "        \"7\": \"pqrs\",\n",
+    "        \"8\": \"tuv\",\n",
+    "        \"9\": \"wxyz\",\n",
+    "    }\n",
+    "\n",
+    "    def letterCombinations(self, digits: str) -> List[str]:\n",
+    "        if len(digits) == 0:\n",
+    "            return []\n",
+    "        elif len(digits) == 1:\n",
+    "            return list(self.mapping[digits[0]])\n",
+    "        else:\n",
+    "            right_ = self.letterCombinations(digits[1:])\n",
+    "            result = []\n",
+    "            for l in self.mapping[digits[0]]:\n",
+    "                for r in right_:\n",
+    "                    result.append(l + r)\n",
+    "            return result\n",
+    "\n",
+    "# Test the solution\n",
+    "print(Solution().letterCombinations(\"79\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa81a5d9-bdf0-49f9-a986-4e6580f67552",
+   "metadata": {},
+   "source": [
+    "## 77.\n",
+    "Date: 3rd Jan 2024<br>\n",
+    "Medium Leetcode: triangle<br>\n",
+    "Solution: https://leetcode.com/problems/triangle/submissions/1135732715/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "5a69507a-6c50-4724-a319-5ec806da8afe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def minimumTotal(self, triangle: List[List[int]]) -> int:\n",
+    "        for i in range(len(triangle) - 2, -1, -1):\n",
+    "            for j in range(len(triangle[i])):\n",
+    "                triangle[i][j] += min(triangle[i + 1][j], triangle[i + 1][j + 1])\n",
+    "                \n",
+    "        return triangle[0][0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().minimumTotal([[2],[3,4],[6,5,7],[4,1,8,3]]) == 11\n",
+    "assert Solution().minimumTotal([[-10]]) == -10\n",
+    "assert Solution().minimumTotal([[-1000]]) == -1000\n",
+    "assert Solution().minimumTotal([[0]]) == 0\n",
+    "assert Solution().minimumTotal([[-10],[10,0],[10,20,-10]]) == -20"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81946c52-676d-47b2-b20e-b4abbe3dc986",
+   "id": "07bcd71e-631f-4bda-9cb3-dec91b83ed80",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5079,7 +5205,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cef31b0-030f-4528-affa-d716bfff169b",
+   "id": "2c7587fa-a7cb-41ed-b0ce-09c55535d444",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5144aacc-c01e-486f-8c1d-1bee35eeaf3b",
    "metadata": {},
    "outputs": [],
    "source": []
