Day 16 - Check In

--- a/100L30D.ipynb
+++ b/100L30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 100L30D\n",
-    "![77%](https://progress-bar.dev/77?title=progress&width=100)\n",
+    "![80%](https://progress-bar.dev/80?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 100 Leetcode problems of varying difficulty in 30 days.<br>\n",
@@ -1008,7 +1008,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://tinyurl.com/TaPeIC\n"
+      "https://tinyurl.com/vzGZfc\n"
      ]
     }
    ],
@@ -1775,7 +1775,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|#######################################################################| 362880/362880 [00:02<00:00, 134476.39it/s]\n"
+      "100%|###########################################################################################################| 362880/362880 [00:02<00:00, 134256.75it/s]\n"
      ]
     }
    ],
@@ -5195,33 +5195,201 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b77aca59-95dd-46f8-b02a-2082d9b991f1",
+   "metadata": {},
+   "source": [
+    "## 78.\n",
+    "Date: 4th Jan 2024<br>\n",
+    "Medium Leetcode: perfect-squares<br>\n",
+    "Solution: https://leetcode.com/problems/perfect-squares/submissions/1136120395/"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "07bcd71e-631f-4bda-9cb3-dec91b83ed80",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def numSquares(self, n: int) -> int:\n",
+    "\n",
+    "        # Time complexity: O(N*M)\n",
+    "        # Space complexity: O(N*M)\n",
+    "        # N - num of perfect squares\n",
+    "        # M - amount\n",
+    "\n",
+    "        # Get possible values that can \n",
+    "        perfect_squares = [_ * _ for _ in range(1, int(math.sqrt(n)) + 1)]\n",
+    "\n",
+    "        # Assign a DP Grid\n",
+    "        dp = [[0 for i in range(n + 1)] for j in range(len(perfect_squares))]\n",
+    "\n",
+    "        for i, square in enumerate(perfect_squares):\n",
+    "            for amt in range(1, n + 1):\n",
+    "                if i == 0:\n",
+    "                    dp[i][amt] = 1 + dp[i][amt - square]\n",
+    "                elif amt < square:\n",
+    "                    dp[i][amt] = dp[i - 1][amt]\n",
+    "                else:\n",
+    "                    dp[i][amt] = min(dp[i - 1][amt], 1 + dp[i][amt - square])\n",
+    "\n",
+    "        return dp[-1][-1]\n",
+    "\n",
+    "# Test the solution\n",
+    "assert Solution().numSquares(10000) == 1\n",
+    "assert Solution().numSquares(9999) == 4\n",
+    "assert Solution().numSquares(13) == 2\n",
+    "assert Solution().numSquares(1) == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22107c93-f2ee-4fc9-bf5e-2c694734685f",
+   "metadata": {},
+   "source": [
+    "## 79.\n",
+    "Date: 4th Jan 2024<br>\n",
+    "Medium Leetcode: minimum-number-of-operations-to-make-array-empty<br>\n",
+    "Solution: https://leetcode.com/problems/minimum-number-of-operations-to-make-array-empty/submissions/1136217904/"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "id": "2c7587fa-a7cb-41ed-b0ce-09c55535d444",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "\n",
+    "    @functools.cache\n",
+    "    def minOperationForN(self, n: int) -> int:\n",
+    "        if n == 1:\n",
+    "            return math.inf\n",
+    "        elif n == 2 or n == 3:\n",
+    "            return 1\n",
+    "        else:\n",
+    "            return min(1 + self.minOperationForN(n - 3), 1 + self.minOperationForN(n - 2))\n",
+    "\n",
+    "    def minOperations(self, nums: List[int]) -> int:\n",
+    "        '''\n",
+    "        a - 10\n",
+    "        b - 25\n",
+    "        '''\n",
+    "        res = 0\n",
+    "        for freq in list(collections.Counter(nums).values()):\n",
+    "            res += self.minOperationForN(freq)\n",
+    "        return res if res != math.inf else -1\n",
+    "\n",
+    "# Test the solution\n",
+    "assert Solution().minOperations([2,1,2,2,3,3]) == -1\n",
+    "assert Solution().minOperations([2,2]) == 1\n",
+    "assert Solution().minOperations([2,3]) == -1\n",
+    "assert Solution().minOperations([2,2,3]) == -1\n",
+    "assert Solution().minOperations([2,2,2]) == 1\n",
+    "assert Solution().minOperations([1,2,3,3]) == -1\n",
+    "assert Solution().minOperations([1,2,3]) == -1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7bd49be-a5b7-402a-8e1c-a6f1062ea3d3",
+   "metadata": {},
+   "source": [
+    "## 80.\n",
+    "Date: 4th Jan 2024<br>\n",
+    "Medium Leetcode: maximum-product-subarray<br>\n",
+    "Solution: https://leetcode.com/problems/maximum-product-subarray/submissions/1136745625/"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5144aacc-c01e-486f-8c1d-1bee35eeaf3b",
+   "execution_count": 87,
+   "id": "be9c4c53-e9c0-4da7-b019-925e34885939",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import itertools\n",
+    "\n",
+    "class Solution:\n",
+    "    def maxProduct_n2_solution(self, nums: List[int]) -> int:\n",
+    "        n = len(nums)\n",
+    "\n",
+    "        # Crucial for passing the TLE test case :(\n",
+    "        total_prod = functools.reduce(lambda x, y: x * y, nums, 1)\n",
+    "        if total_prod > 0:\n",
+    "            return total_prod\n",
+    "\n",
+    "        for i in range(n):\n",
+    "            rolling_products = [1 for _ in range(n - i)]\n",
+    "            for j, num in enumerate(nums[i:]):\n",
+    "                rolling_products[j] = (num * rolling_products[j - 1]) if j > 0 else num\n",
+    "            nums[i] = max(rolling_products)\n",
+    "\n",
+    "        return max(nums)\n",
+    "\n",
+    "    def maxProduct(self, nums: List[int]) -> int:\n",
+    "        # https://www.youtube.com/watch?v=hnswaLJvr6g\n",
+    "        prefix = suffix = 1\n",
+    "        n = len(nums)\n",
+    "        res = -math.inf\n",
+    "        for i in range(len(nums)):\n",
+    "            j = n - i - 1\n",
+    "\n",
+    "            prefix *= nums[i]\n",
+    "            suffix *= nums[j]\n",
+    "            \n",
+    "            res = max(res, prefix, suffix)\n",
+    "            \n",
+    "            if prefix == 0:\n",
+    "                prefix = 1\n",
+    "                \n",
+    "            if nums[j] == 0:\n",
+    "                suffix = 1\n",
+    "            \n",
+    "        return res\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().maxProduct([2,3,-2,4]) == 6\n",
+    "assert Solution().maxProduct([-2,0,-1]) == 0\n",
+    "assert Solution().maxProduct([0]) == 0\n",
+    "assert Solution().maxProduct([10]) == 10\n",
+    "assert Solution().maxProduct([-1,-10,0,5,-5]) == 10\n",
+    "assert Solution().maxProduct([-1,-2,-3,0]) == 6\n",
+    "assert Solution().maxProduct([0,2]) == 2\n",
+    "assert Solution().maxProduct([-3,0,1,-2]) == 1"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "87e073ad-3778-4fcc-b05c-37c4d7616e10",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "708d9714-1557-47fb-b288-7963eb84ca52",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2013102-167a-4af0-a5f2-b911de86e939",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ec5ed17-82b0-47a7-a087-698c93dd7c4b",
    "metadata": {},
    "outputs": [],
    "source": []
